applications/irc/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: irc
  labels:
    app.kubernetes.io/part-of: irc
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    goldilocks.fairwinds.com/enabled: 'true'
    goldilocks.fairwinds.com/vpa-update-mode: 'off'
